--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,9 +19,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm install
       
       - name: Install Bruno CLI
-        run: npm install -g @usebruno/cli
+        run: npm install -g @usebruno/cli@2.15.1
       
       - name: Verify Bruno installation
         run: bru --version
