--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,11 @@ jobs:
           node-version: '18'
           cache: 'npm'
       
+      - name: Configure npm authentication
+        run: |
+          echo "@paystra:registry=https://npm.pkg.github.com" >> .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.READ_TOKEN }}" >> .npmrc
+      
       - name: Install dependencies
         run: npm install
       
