--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,4 +37,6 @@ jobs:
       
       - name: Run tests with util tag
         run: bru run --tags util --env local-dev
+        env:
+          NODE_PATH: node_modules
 
