--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Bruno API testing project with bruno-util",
   "private": true,
   "dependencies": {
-    "@paystra/bruno-util": "^1.0.0"
+    "@paystra/bruno-util": "^1.5.14",
+    "terser": "^5.44.1"
   }
 }
 
