--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
+  test-bruno-2-15-1:
+    name: test bruno 2.15.1
     runs-on: ubuntu-latest
     
     steps:
@@ -31,8 +32,43 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.READ_TOKEN }}
         continue-on-error: false
       
-      - name: Install Bruno CLI
+      - name: Install Bruno CLI 2.15.1
         run: npm install -g @usebruno/cli@2.15.1
+      
+      - name: Verify Bruno installation
+        run: bru --version
+      
+      - name: Run tests with util tag
+        run: bru run --tags util --env local-dev
+        env:
+          NODE_PATH: ${{ github.workspace }}/node_modules
+
+  test-bruno-latest:
+    name: test bruno latest
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@paystra'
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.READ_TOKEN }}
+      
+      - name: Install dependencies
+        run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.READ_TOKEN }}
+        continue-on-error: false
+      
+      - name: Install Bruno CLI latest
+        run: npm install -g @usebruno/cli@latest
       
       - name: Verify Bruno installation
         run: bru --version
