--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,12 @@ jobs:
         run: bru run --tags util --env local-dev
         env:
           NODE_PATH: ${{ github.workspace }}/node_modules
+        continue-on-error: true
+      
+      - name: Run tests with util tag (sandbox developer)
+        run: bru run --tags util --env local-dev --sandbox developer
+        env:
+          NODE_PATH: ${{ github.workspace }}/node_modules
 
   test-bruno-latest:
     name: test bruno latest
@@ -75,6 +81,12 @@ jobs:
       
       - name: Run tests with util tag
         run: bru run --tags util --env local-dev
+        env:
+          NODE_PATH: ${{ github.workspace }}/node_modules
+        continue-on-error: true
+      
+      - name: Run tests with util tag (sandbox developer)
+        run: bru run --tags util --env local-dev --sandbox developer
         env:
           NODE_PATH: ${{ github.workspace }}/node_modules
 
