--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,14 +35,43 @@ jobs:
       - name: Install Bruno CLI 2.15.1
         run: npm install -g @usebruno/cli@2.15.1
       
-      - name: Verify Bruno installation
+      - name: Verify Bruno version
         run: bru --version
       
       - name: Run tests with util tag
         run: bru run --tags util --env local-dev
         env:
           NODE_PATH: ${{ github.workspace }}/node_modules
-        continue-on-error: true
+
+  test-bruno-2-15-1-sandbox:
+    name: test bruno 2.15.1 sandbox
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@paystra'
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.READ_TOKEN }}
+      
+      - name: Install dependencies
+        run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.READ_TOKEN }}
+        continue-on-error: false
+      
+      - name: Install Bruno CLI 2.15.1
+        run: npm install -g @usebruno/cli@2.15.1
+      
+      - name: Verify Bruno version
+        run: bru --version
       
       - name: Run tests with util tag (sandbox developer)
         run: bru run --tags util --env local-dev --sandbox developer
@@ -76,14 +105,43 @@ jobs:
       - name: Install Bruno CLI latest
         run: npm install -g @usebruno/cli@latest
       
-      - name: Verify Bruno installation
+      - name: Verify Bruno version
         run: bru --version
       
       - name: Run tests with util tag
         run: bru run --tags util --env local-dev
         env:
           NODE_PATH: ${{ github.workspace }}/node_modules
-        continue-on-error: true
+
+  test-bruno-latest-sandbox:
+    name: test bruno latest sandbox
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@paystra'
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.READ_TOKEN }}
+      
+      - name: Install dependencies
+        run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.READ_TOKEN }}
+        continue-on-error: false
+      
+      - name: Install Bruno CLI latest
+        run: npm install -g @usebruno/cli@latest
+      
+      - name: Verify Bruno version
+        run: bru --version
       
       - name: Run tests with util tag (sandbox developer)
         run: bru run --tags util --env local-dev --sandbox developer
